Updated README with settings