@@ -1,1 +1,7 @@
 # websocket-chat
+Server should be started from ChatServer Main
+Before running apply the following settings to IDE:
+
+ChatClient -> Edit Configuration -> Modify Options -> Allow Multiple instances (should be on)
+ChatClient -> Edit Configuration -> Modify Options -> Add VM Options -> should be set to --enable-preview
+Preferences -> Java Compiler -> Additional Command Line Parameters -> should be set to --enable-preview
